adicinando json viewer

--- a/sandman/src/main/res/values-night/colors.xml
+++ b/sandman/src/main/res/values-night/colors.xml
@@ -2,4 +2,8 @@
 <resources>
 
     <color name="the_dreaming_background">#FF121212</color>
+
+    <color name="text_title">#FFFFFFFF</color>
+    <color name="text_paragraph">#D8D8D8</color>
+    <color name="text_hyperlink">#FF00C4FF</color>
 </resources>
