--- a/sandman/src/main/res/values/styles.xml
+++ b/sandman/src/main/res/values/styles.xml
@@ -1,5 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="Theme.Sandman" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/brand_default</item>
+        <item name="colorPrimaryVariant">@color/brand_secondary</item>
+        <item name="colorOnPrimary">@android:color/white</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/co_brand_default</item>
+        <item name="colorSecondaryVariant">@color/co_brand_secondary</item>
+        <item name="colorOnSecondary">@android:color/black</item>
+
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+
+        <item name="fontFamily">@font/lato</item>
+    </style>
 
     <style name="TheDreaming">
         <item name="the_dreaming_background_color">@android:color/holo_green_dark</item>
