--- a/sandman/src/main/res/layout/activity_json_viewer.xml
+++ b/sandman/src/main/res/layout/activity_json_viewer.xml
@@ -53,6 +53,7 @@
         android:id="@+id/json_viewer_recycler"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:overScrollMode="never"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
