--- a/sandman/src/main/res/layout/the_dreaming_layout.xml
+++ b/sandman/src/main/res/layout/the_dreaming_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,7 +12,11 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="10dp"
-        android:background="@android:color/transparent" />
+        android:background="@android:color/transparent"
+        app:tabMode="scrollable"
+        app:tabSelectedTextColor="@color/text_title"
+        app:tabTextAppearance="@style/TextAppearance_Tab"
+        app:tabTextColor="@color/text_title" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/td_dreams_vp"
