--- a/sandman/src/main/res/values-night/colors.xml
+++ b/sandman/src/main/res/values-night/colors.xml
@@ -6,4 +6,9 @@
     <color name="text_title">#FFFFFFFF</color>
     <color name="text_paragraph">#D8D8D8</color>
     <color name="text_hyperlink">#FF00C4FF</color>
+
+    <color name="icon_negative_50">#33FF0000</color>
+    <color name="icon_positive_50">#330AFF00</color>
+
+    <color name="divider">#22FFFFFF</color>
 </resources>
