--- a/sandman/src/main/res/drawable/background_method.xml
+++ b/sandman/src/main/res/drawable/background_method.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <solid android:color="@android:color/white"/>
-    <corners android:radius="10dp"/>
+    <stroke android:width="1dp" android:color="@android:color/white"/>
+    <corners android:radius="5dp"/>
+    <solid android:color="@android:color/transparent"/>
 </shape>
