--- a/sandman/src/main/res/drawable/the_dreaming_background.xml
+++ b/sandman/src/main/res/drawable/the_dreaming_background.xml
@@ -13,14 +13,14 @@
 
             <shape android:shape="rectangle">
                 <stroke android:width="1dp" android:color="@android:color/black"/>
-                <solid android:color="?the_dreaming_background_color"/>
+                <solid android:color="@android:color/black"/>
             </shape>
         </rotate>
     </item>
     <item android:top="10dp">
         <shape android:shape="rectangle">
             <corners android:radius="10dp"/>
-            <solid android:color="?the_dreaming_background_color"/>
+            <solid android:color="@color/the_dreaming_background"/>
             <stroke android:width="1dp" android:color="@android:color/black"/>
         </shape>
     </item>
@@ -34,7 +34,7 @@
             android:toDegrees="40"
             android:fromDegrees="45">
             <shape android:shape="rectangle">
-                <solid android:color="?the_dreaming_background_color"/>
+                <solid android:color="@color/the_dreaming_background"/>
             </shape>
         </rotate>
     </item>
