--- a/sandman/src/main/res/layout/activity_json_viewer.xml
+++ b/sandman/src/main/res/layout/activity_json_viewer.xml
@@ -17,15 +17,11 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/json_viewer_search_view_layout"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        style="@style/SearchView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:paddingHorizontal="10dp"
         android:paddingBottom="10dp"
-        app:endIconCheckable="true"
-        app:endIconDrawable="@drawable/ic_search"
-        app:endIconMode="custom"
-        app:endIconTint="?colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/json_viewer_toolbar">
