--- a/sandman/src/main/res/layout/fragment_network.xml
+++ b/sandman/src/main/res/layout/fragment_network.xml
@@ -13,20 +13,16 @@
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingVertical="10dp"
             app:layout_scrollFlags="enterAlways|scroll">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/net_search_layout"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                style="@style/SearchView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="50dp"
-                android:paddingHorizontal="10dp"
-                android:paddingBottom="10dp"
-                app:endIconCheckable="true"
-                app:endIconDrawable="@drawable/ic_search"
-                app:endIconMode="custom"
-                app:endIconTint="?colorPrimary">
+                android:paddingHorizontal="10dp">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/net_search_view"
