--- a/sandman/src/main/res/values-night/colors.xml
+++ b/sandman/src/main/res/values-night/colors.xml
@@ -2,13 +2,20 @@
 <resources>
 
     <color name="the_dreaming_background">#FF121212</color>
+    <color name="the_dreaming_background_secondary">#1E1E1E</color>
+    <color name="the_dreaming_background_tertiary">#292929</color>
 
     <color name="text_title">#FFFFFFFF</color>
     <color name="text_paragraph">#D8D8D8</color>
     <color name="text_hyperlink">#FF00C4FF</color>
 
-    <color name="icon_negative_50">#33FF0000</color>
-    <color name="icon_positive_50">#330AFF00</color>
+    <color name="icon_negative">#BC0000</color>
+    <color name="icon_positive">#046500</color>
 
     <color name="divider">#22FFFFFF</color>
+
+    <color name="net_entry_post">#03A9F4</color>
+    <color name="net_entry_put">#FF5722</color>
+    <color name="net_entry_get">#388E3C</color>
+    <color name="net_entry_delete">#FF4545</color>
 </resources>
