--- a/sandman/src/main/res/values/styles.xml
+++ b/sandman/src/main/res/values/styles.xml
@@ -15,12 +15,15 @@
         <item name="windowNoTitle">true</item>
 
         <item name="fontFamily">@font/lato</item>
+
     </style>
 
-    <style name="TheDreaming">
-        <item name="the_dreaming_background_color">@android:color/holo_green_dark</item>
-        <item name="the_dreaming_stroke_color">@android:color/holo_red_dark</item>
-        <item name="the_dreaming_primary_color">?colorPrimary</item>
+    <style name="SearchView" parent="Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">
+        <item name="boxBackgroundColor">#33000000</item>
+        <item name="endIconCheckable">true</item>
+        <item name="endIconDrawable">@drawable/ic_search</item>
+        <item name="endIconMode">custom</item>
+        <item name="endIconTint">?colorPrimary</item>
     </style>
 
     <style name="TextAppearance_Tab">
