--- a/sandman/src/main/res/values-night/colors.xml
+++ b/sandman/src/main/res/values-night/colors.xml
@@ -8,6 +8,7 @@
     <color name="text_title">#FFFFFFFF</color>
     <color name="text_paragraph">#D8D8D8</color>
     <color name="text_hyperlink">#FF00C4FF</color>
+    <color name="text_highlight">#FFFFEB3B</color>
 
     <color name="icon_negative">#BC0000</color>
     <color name="icon_positive">#046500</color>
