removing view pager on the dreaming view rename morpheus to sandman some adjusts on animations

--- a/sandman/src/main/res/xml/activity_json_viewer_scene.xml
+++ b/sandman/src/main/res/xml/activity_json_viewer_scene.xml
@@ -18,11 +18,7 @@
             android:layout_height="wrap_content"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
-            motion:layout_constraintTop_toTopOf="parent">
-            <CustomAttribute
-                motion:attributeName="title"
-                motion:customStringValue="Json Viewer" />
-        </Constraint>
+            motion:layout_constraintTop_toTopOf="parent" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
@@ -40,10 +36,6 @@
             android:layout_height="wrap_content"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
-            motion:layout_constraintTop_toTopOf="parent">
-            <CustomAttribute
-                motion:attributeName="title"
-                motion:customStringValue="" />
-        </Constraint>
+            motion:layout_constraintTop_toTopOf="parent" />
     </ConstraintSet>
 </MotionScene>
