--- a/sandman/src/main/res/layout/activity_network_entry.xml
+++ b/sandman/src/main/res/layout/activity_network_entry.xml
@@ -72,7 +72,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingBottom="100dp">
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/net_entry_details_request_title"
