--- a/sandman/src/main/res/layout/item_network_entry.xml
+++ b/sandman/src/main/res/layout/item_network_entry.xml
@@ -14,9 +14,25 @@
         android:layout_margin="10dp"
         android:background="@drawable/background_dot"
         android:backgroundTint="@color/icon_positive"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@id/net_entry_hour"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/net_entry_hour" />
+        app:layout_constraintTop_toTopOf="@id/net_entry_hour"
+        tools:visibility="invisible" />
+
+    <ProgressBar
+        android:id="@+id/net_entry_loading"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:scaleX="2"
+        android:scaleY="2"
+        android:indeterminateTint="@color/text_highlight"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@id/net_entry_dot"
+        app:layout_constraintEnd_toEndOf="@id/net_entry_dot"
+        app:layout_constraintStart_toStartOf="@id/net_entry_dot"
+        app:layout_constraintTop_toTopOf="@id/net_entry_dot"
+        tools:visibility="visible" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/net_entry_hour"
@@ -85,10 +101,25 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:rotation="-90"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_down" />
+        app:srcCompat="@drawable/ic_down"
+        tools:visibility="invisible" />
+
+    <androidx.appcompat.widget.AppCompatCheckBox
+        android:id="@+id/net_entry_checkbox"
+        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:gravity="center"
+        android:buttonTint="@color/text_highlight"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
 
     <View
         android:layout_width="0dp"
