--- a/sandman/src/main/res/layout/activity_crash.xml
+++ b/sandman/src/main/res/layout/activity_crash.xml
@@ -77,6 +77,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginEnd="10dp"
+        android:scaleType="centerCrop"
         android:layout_marginBottom="10dp"
         android:background="@drawable/background_secondary_radius"
         android:visibility="invisible"
