--- a/sandman/src/main/res/xml/activity_crash_scene.xml
+++ b/sandman/src/main/res/xml/activity_crash_scene.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<MotionScene 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:motion="http://schemas.android.com/apk/res-auto">
 
     <Transition
@@ -74,4 +73,25 @@
             android:layout_marginEnd="10dp"
             motion:layout_constraintTop_toBottomOf="@id/close_img_avd" />
     </ConstraintSet>
+    <ConstraintSet
+        android:id="@+id/expanded_img"
+        motion:deriveConstraintsFrom="@+id/end" >
+
+        <Constraint
+            android:id="@+id/crash_thumb"
+            motion:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:scaleType="fitCenter"
+            android:visibility="visible"
+            motion:layout_constraintTop_toTopOf="parent"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintBottom_toBottomOf="parent"/>
+    </ConstraintSet>
+    <Transition
+        motion:constraintSetStart="@+id/end"
+        motion:constraintSetEnd="@+id/expanded_img">
+
+        <OnClick motion:targetId="@id/crash_thumb"/>
+    </Transition>
 </MotionScene>
