--- a/sandman/src/main/res/xml/activity_crash_scene.xml
+++ b/sandman/src/main/res/xml/activity_crash_scene.xml
@@ -6,92 +6,100 @@
         motion:constraintSetEnd="@+id/end"
         motion:constraintSetStart="@id/start"
         motion:duration="1000">
-       <KeyFrameSet>
-       </KeyFrameSet>
+        <KeyFrameSet></KeyFrameSet>
     </Transition>
 
-    <ConstraintSet android:id="@+id/start">
-    </ConstraintSet>
+    <ConstraintSet android:id="@+id/start"></ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
         <Constraint
             android:id="@+id/close_img_avd"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_marginTop="0dp"
-            android:layout_marginBottom="0dp"
             android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
             android:layout_marginEnd="0dp"
-            motion:layout_constraintTop_toTopOf="@id/crash_status_bar_guideline"
-            motion:layout_constraintStart_toStartOf="parent" />
+            android:layout_marginBottom="0dp"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintTop_toTopOf="@id/crash_status_bar_guideline" />
 
         <Constraint
             android:id="@+id/crash_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            motion:layout_constraintTop_toTopOf="@id/close_img_avd"
             motion:layout_constraintBottom_toBottomOf="@id/close_img_avd"
-            motion:layout_constraintStart_toEndOf="@id/close_img_avd" />
+            motion:layout_constraintStart_toEndOf="@id/close_img_avd"
+            motion:layout_constraintTop_toTopOf="@id/close_img_avd" />
 
         <Constraint
-            motion:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/crash_background"
             android:layout_width="0dp"
             android:layout_height="0dp"
             motion:layout_constraintBottom_toBottomOf="@+id/crash_thumb_spacing"
-            motion:layout_constraintTop_toTopOf="parent"
+            motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
-            android:id="@+id/crash_background" />
+            motion:layout_constraintTop_toTopOf="parent" />
 
         <Constraint
             android:id="@+id/crash_screen_name_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
             android:visibility="visible"
             motion:layout_constraintBottom_toTopOf="@id/crash_screen_name"
-            android:layout_marginStart="10dp"
-            motion:layout_constraintVertical_chainStyle="packed"
+            motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toTopOf="@id/crash_thumb"
-            motion:layout_constraintStart_toStartOf="parent" />
+            motion:layout_constraintVertical_chainStyle="packed" />
 
         <Constraint
             android:id="@+id/crash_screen_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            motion:layout_constraintBottom_toBottomOf="@id/crash_thumb"
             android:visibility="visible"
+            motion:layout_constraintBottom_toBottomOf="@id/crash_thumb"
+            motion:layout_constraintStart_toStartOf="@id/crash_screen_name_label"
             motion:layout_constraintTop_toBottomOf="@id/crash_screen_name_label"
-            motion:layout_constraintVertical_chainStyle="packed"
-            motion:layout_constraintStart_toStartOf="@id/crash_screen_name_label" />
+            motion:layout_constraintVertical_chainStyle="packed" />
 
         <Constraint
             android:id="@+id/crash_thumb"
-            motion:layout_constraintEnd_toEndOf="parent"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
             android:visibility="visible"
-            android:layout_marginEnd="10dp"
+            motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintTop_toBottomOf="@id/close_img_avd" />
     </ConstraintSet>
     <ConstraintSet
         android:id="@+id/expanded_img"
-        motion:deriveConstraintsFrom="@+id/end" >
+        motion:deriveConstraintsFrom="@+id/end">
 
         <Constraint
             android:id="@+id/crash_thumb"
-            motion:layout_constraintEnd_toEndOf="parent"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:scaleType="fitCenter"
             android:visibility="visible"
-            motion:layout_constraintTop_toTopOf="parent"
+            motion:layout_constraintBottom_toBottomOf="parent"
+            motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
-            motion:layout_constraintBottom_toBottomOf="parent"/>
+            motion:layout_constraintTop_toTopOf="parent" />
+
+        <Constraint
+            android:id="@+id/crash_background"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            motion:layout_constraintBottom_toBottomOf="@+id/crash_screen_name"
+            motion:layout_constraintEnd_toEndOf="parent"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintTop_toTopOf="parent" />
+
     </ConstraintSet>
     <Transition
-        motion:constraintSetStart="@+id/end"
-        motion:constraintSetEnd="@+id/expanded_img">
+        motion:constraintSetEnd="@+id/expanded_img"
+        motion:constraintSetStart="@+id/end">
 
-        <OnClick motion:targetId="@id/crash_thumb"/>
+        <OnClick motion:targetId="@id/crash_thumb" />
     </Transition>
 </MotionScene>
