--- a/sandman/corinthian/src/main/res/layout/activity_json_viewer.xml
+++ b/sandman/corinthian/src/main/res/layout/activity_json_viewer.xml
@@ -35,15 +35,15 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/json_viewer_disclaimer"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/json_viewer_search_view_layout"
-        android:id="@+id/json_viewer_disclaimer"
         android:padding="10dp"
+        android:text="@string/json_viewer_disclaimer"
         android:textColor="@color/text_paragraph"
-        android:text="@string/json_viewer_disclaimer"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/json_viewer_search_view_layout" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/json_viewer_recycler"
