--- a/sandman/corinthian/src/main/res/layout/item_network_entry.xml
+++ b/sandman/corinthian/src/main/res/layout/item_network_entry.xml
@@ -11,7 +11,7 @@
         android:id="@+id/net_entry_dot"
         android:layout_width="10dp"
         android:layout_height="10dp"
-        android:layout_margin="10dp"
+        android:layout_marginStart="10dp"
         android:background="@drawable/background_dot"
         android:backgroundTint="@color/icon_positive"
         android:visibility="visible"
@@ -51,7 +51,7 @@
         android:id="@+id/net_entry_elapsed_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginStart="10dp"
         android:textColor="@color/text_title"
         android:textSize="11sp"
         app:fontFamily="@font/lato"
