--- a/sandman/corinthian/src/main/res/layout/corinthian_activity_network_entry.xml
+++ b/sandman/corinthian/src/main/res/layout/corinthian_activity_network_entry.xml
@@ -6,14 +6,14 @@
     android:layout_height="match_parent"
     android:background="@color/the_dreaming_background"
     android:fitsSystemWindows="false"
-    app:layoutDescription="@xml/activity_network_entry_scene">
+    app:layoutDescription="@xml/corinthian_activity_network_entry_scene">
 
     <View
         android:id="@+id/net_entry_details_background"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/icon_negative"
-        app:layout_constraintBottom_toBottomOf="@id/net_entry_details_general_info"
+        app:layout_constraintBottom_toBottomOf="@id/net_entry_details_copy_all"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,7 +25,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:navigationIcon="@drawable/ic_arrow_back" />
+        app:navigationIcon="@drawable/sandman_ic_arrow_back" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/net_entry_details_status_code"
@@ -61,6 +61,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/net_entry_details_method" />
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/net_entry_details_copy_all"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:drawableStart="@drawable/sandman_ic_copy"
+        android:drawablePadding="10dp"
+        android:foreground="?selectableItemBackground"
+        android:gravity="center"
+        android:padding="10dp"
+        android:text="@string/network_copy"
+        android:textColor="@color/text_hyperlink"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/net_entry_details_general_info" />
+
     <androidx.core.widget.NestedScrollView
         android:id="@+id/net_entry_details_scroll"
         android:layout_width="0dp"
@@ -81,8 +96,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="10dp"
-                android:background="@drawable/background_secondary_radius_top"
-                android:drawableStart="@drawable/ic_arrow_forward"
+                android:background="@drawable/sandman_background_secondary_radius_top"
+                android:drawableStart="@drawable/sandman_ic_arrow_forward"
                 android:drawablePadding="10dp"
                 android:gravity="center_vertical"
                 android:padding="10dp"
@@ -93,11 +108,11 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/net_entry_details_request_headers_container"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/background_tertiary_radius_bot"
+                android:background="@drawable/sandman_background_tertiary_radius_bot"
                 android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="@id/net_entry_details_request_title"
                 app:layout_constraintStart_toStartOf="@id/net_entry_details_request_title"
@@ -111,11 +126,25 @@
                     android:layout_marginTop="10dp"
                     android:text="Headers"
                     android:textColor="@color/text_title"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/net_entry_details_request_copy_headers"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:foreground="?selectableItemBackground"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    app:layout_constraintBottom_toBottomOf="@id/net_entry_details_request_headers_title"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/net_entry_details_request_headers_title"
+                    app:srcCompat="@drawable/sandman_ic_copy" />
 
                 <HorizontalScrollView
                     android:id="@+id/net_entry_details_request_headers_horizontal_scroll"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -141,12 +170,39 @@
                     android:text="Body"
                     android:textColor="@color/text_title"
                     android:textStyle="bold"
-                    app:layout_constraintStart_toStartOf="@id/net_entry_details_request_title"
-                    app:layout_constraintTop_toBottomOf="@id/net_entry_details_request_headers_container" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/net_entry_details_request_headers_horizontal_scroll" />
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/net_entry_details_request_copy_body"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:foreground="?selectableItemBackground"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    app:layout_constraintBottom_toBottomOf="@id/net_entry_details_request_body_title"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/net_entry_details_request_body_title"
+                    app:srcCompat="@drawable/sandman_ic_copy" />
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/net_entry_details_request_search_body"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:foreground="?selectableItemBackground"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toBottomOf="@id/net_entry_details_request_body_title"
+                    app:layout_constraintEnd_toStartOf="@id/net_entry_details_request_copy_body"
+                    app:layout_constraintTop_toTopOf="@id/net_entry_details_request_body_title"
+                    app:srcCompat="@drawable/sandman_ic_search"
+                    app:tint="@color/text_hyperlink"
+                    tools:visibility="visible" />
 
                 <HorizontalScrollView
                     android:id="@+id/net_entry_details_request_body_horizontal_scroll"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -163,7 +219,7 @@
 
                 </HorizontalScrollView>
 
-            </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/net_entry_details_response_title"
@@ -171,8 +227,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="30dp"
-                android:background="@drawable/background_secondary_radius_top"
-                android:drawableStart="@drawable/ic_arrow_back"
+                android:background="@drawable/sandman_background_secondary_radius_top"
+                android:drawableStart="@drawable/sandman_ic_arrow_back"
                 android:drawablePadding="10dp"
                 android:gravity="center_vertical"
                 android:padding="10dp"
@@ -183,10 +239,10 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/net_entry_details_request_headers_container" />
 
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/background_tertiary_radius_bot"
+                android:background="@drawable/sandman_background_tertiary_radius_bot"
                 android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="@id/net_entry_details_response_title"
                 app:layout_constraintStart_toStartOf="@id/net_entry_details_response_title"
@@ -201,13 +257,28 @@
                     android:text="Headers"
                     android:textColor="@color/text_title"
                     android:textStyle="bold"
-                    app:layout_constraintStart_toStartOf="@id/net_entry_details_response_title"
-                    app:layout_constraintTop_toBottomOf="@id/net_entry_details_response_title" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/net_entry_details_response_copy_headers"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:foreground="?selectableItemBackground"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    app:layout_constraintBottom_toBottomOf="@id/net_entry_details_response_headers_title"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/net_entry_details_response_headers_title"
+                    app:srcCompat="@drawable/sandman_ic_copy" />
 
                 <HorizontalScrollView
                     android:id="@+id/net_entry_details_response_headers_horizontal_scroll"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/net_entry_details_response_headers_title">
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/net_entry_details_response_headers"
@@ -228,12 +299,44 @@
                     android:layout_marginTop="20dp"
                     android:text="Body"
                     android:textColor="@color/text_title"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/net_entry_details_response_headers_horizontal_scroll" />
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/net_entry_details_response_copy_body"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:foreground="?selectableItemBackground"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    app:layout_constraintBottom_toBottomOf="@id/net_entry_details_response_body_title"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/net_entry_details_response_body_title"
+                    app:srcCompat="@drawable/sandman_ic_copy" />
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/net_entry_details_response_search_body"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:foreground="?selectableItemBackground"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toBottomOf="@id/net_entry_details_response_body_title"
+                    app:layout_constraintEnd_toStartOf="@id/net_entry_details_response_copy_body"
+                    app:layout_constraintTop_toTopOf="@id/net_entry_details_response_body_title"
+                    app:srcCompat="@drawable/sandman_ic_search"
+                    app:tint="@color/text_hyperlink"
+                    tools:visibility="visible" />
 
                 <HorizontalScrollView
                     android:id="@+id/net_entry_details_response_body_horizontal_scroll"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/net_entry_details_response_body_title">
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/net_entry_details_response_body"
@@ -246,7 +349,7 @@
 
                 </HorizontalScrollView>
 
-            </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
