--- a/content/common/src/main/res/values/bigbrother_styles.xml
+++ b/content/common/src/main/res/values/bigbrother_styles.xml
@@ -15,9 +15,15 @@
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="android:windowLightStatusBar">@bool/bigbrother_is_light</item>
 
         <item name="fontFamily">@font/lato</item>
+        <item name="buttonStyle">@style/Widget.AppCompat.Button.Borderless</item>
+    </style>
 
+    <style name="BigBrotherButton" parent="Widget.AppCompat.Button">
+        <item name="android:backgroundTint">@color/text_title</item>
+        <item name="android:textColor">@color/text_title_inverse</item>
     </style>
 
     <style name="SearchView" parent="Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">
