--- a/app/src/main/res/layout/network_activity.xml
+++ b/app/src/main/res/layout/network_activity.xml
@@ -80,7 +80,7 @@
         android:id="@+id/toolbar"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/oceania_background"
+        android:background="@color/background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/actions_container"
@@ -91,7 +91,7 @@
         android:id="@+id/list_item"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/oceania_background"
+        android:background="@color/background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
