--- a/content/common/src/main/res/drawable/bigbrother_content_background.xml
+++ b/content/common/src/main/res/drawable/bigbrother_content_background.xml
@@ -20,7 +20,7 @@
     <item android:top="10dp">
         <shape android:shape="rectangle">
             <corners android:radius="10dp"/>
-            <solid android:color="@color/oceania_background"/>
+            <solid android:color="@color/background"/>
             <stroke android:width="1dp" android:color="@android:color/black"/>
         </shape>
     </item>
@@ -34,7 +34,7 @@
             android:toDegrees="40"
             android:fromDegrees="45">
             <shape android:shape="rectangle">
-                <solid android:color="@color/oceania_background"/>
+                <solid android:color="@color/background"/>
             </shape>
         </rotate>
     </item>
